--- a/web app (R server)/index.html
+++ b/web app (R server)/index.html
@@ -23,6 +23,9 @@
       <a class="btn btn-primary btn-lg" href="#fr-section" role="button">French apps</a>
       <a class="btn btn-primary btn-lg" href="#about-section" role="button">About</a>
     </p>
+    <p>
+      <i>A word of caution : reading and displaying 1 million sequences might be problematic.  It depends on the R server load.</i>
+    </p>
   </div>
   <div class="container">
     <hr>
